<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.allaboutsums.MenuActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playbuttonstring"
        android:id="@+id/playButton"
        android:layout_marginTop="104dp"
        android:width="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="playGame"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scorebuttonstring"
        android:id="@+id/scoreButton"
        android:layout_below="@+id/playButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="250dp"
        android:onClick="toScore"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpbuttonstring"
        android:id="@+id/helpButton"
        android:layout_below="@+id/scoreButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:width="250dp"
        android:onClick="toHelp"/>
</RelativeLayout>
