<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ebookfrenzy.allaboutsums.GameActivity">

    <TextView android:text="@string/gameheadingstring" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameheading"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberOne"
        android:width="100dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberTwo"
        android:width="100dp"
        android:layout_alignTop="@+id/numberOne"
        android:layout_toRightOf="@+id/additionsign"
        android:layout_toEndOf="@+id/additionsign" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/additionsign"
        android:id="@+id/additionsign"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/numberOne"
        android:layout_toEndOf="@+id/numberOne" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/equalsign"
        android:id="@+id/equalsign"
        android:layout_alignTop="@+id/additionsign"
        android:layout_toRightOf="@+id/numberTwo"
        android:layout_toEndOf="@+id/numberTwo" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/sumNumber"
        android:width="100dp"
        android:layout_alignTop="@+id/numberTwo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okbuttonstring"
        android:id="@+id/okButton"
        android:layout_marginTop="84dp"
        android:width="250dp"
        android:layout_below="@+id/numberOne"
        android:layout_centerHorizontal="true"
        android:onClick="matchSums"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/gameResult"
        android:layout_below="@+id/gameheading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

</RelativeLayout>
